--- a/medals.html
+++ b/medals.html
@@ -2,6 +2,8 @@
 <html>
   <body>
     <h1>Welcome to our store</h1>
+    <h1>everything is free!</h1>
+    <h2>yeeert</h2>
     <p>We have a fine selection of medals.</p>
     <div>
       <a href="bronze.html">Bronze medals</a>
