--- a/medals.html
+++ b/medals.html
@@ -8,5 +8,7 @@
     <div>
       <a href="bronze.html">Bronze medals</a>
     </div>
+    <div>A link to silver medals goes here</div>
+    <div>A link to gold medals goes here</div>
   </body>
 </html>
